Added WorkType entity to DB, backend and frontend