@@ -3,140 +3,126 @@ package com.example.backend.service;
 import com.example.backend.dto.WorkDto;
 import com.example.backend.model.Work;
 import com.example.backend.repository.WorkRepository;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.context.SpringBootTest;
 
 import java.time.LocalDate;
 import java.util.*;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.mockito.Mockito.*;
+import static org.junit.jupiter.api.Assertions.*;
 
+@SpringBootTest
 class WorkServiceTest {
 
-    @Mock
+    @Autowired
     private WorkRepository workRepository;
 
-    @InjectMocks
+    @Autowired
     private WorkService workService;
 
-    public WorkServiceTest() {
-        MockitoAnnotations.openMocks(this);
+    @BeforeEach
+    void setUp() {
+        workRepository.deleteAll();
     }
 
     @Test
     void getAllWorksByCarId_shouldReturnListOfWorkDtos() {
-        // GIVEN
-        String carId = "1";
-        List<WorkDto> works = Arrays.asList(
-                new WorkDto("1", carId, "Oil Change", 5000, LocalDate.of(2023,1,10), 50.0),
-                new WorkDto("2", carId, "Tire Replacement", 8000, LocalDate.of(2023,2,15), 120.0)
-        );
-        when(workRepository.findAllByCarId(carId)).thenReturn(works);
-        // WHEN
+        //GIVEN
+        String carId = "123";
+        Work work1 = new Work("1", carId, "workTypeId","Oil Change", 5000, LocalDate.of(2023,1,10), 50.0);
+        Work work2 = new Work("2", carId, "workTypeId","Tire Replacement", 8000, LocalDate.of(2023,2,15), 120.0);
+        workRepository.saveAll(Arrays.asList(work1, work2));
+        //WHEN
         List<WorkDto> result = workService.getAllWorksByCarId(carId);
-        // THEN
+        //THEN
         assertEquals(2, result.size());
         assertEquals("1", result.getFirst().id());
-        assertEquals(carId, result.getFirst().carId());
+        assertEquals("123", result.getFirst().carId());
         assertEquals("Oil Change", result.getFirst().type());
         assertEquals(5000, result.getFirst().mileage());
-        assertEquals("2023-01-10", result.get(0).date().toString());
-        assertEquals(50.0, result.get(0).price());
+        assertEquals("2023-01-10", result.getFirst().date().toString());
+        assertEquals(50.0, result.getFirst().price());
         assertEquals("2", result.get(1).id());
-        assertEquals(carId, result.get(1).carId());
+        assertEquals("123", result.get(1).carId());
         assertEquals("Tire Replacement", result.get(1).type());
         assertEquals(8000, result.get(1).mileage());
         assertEquals("2023-02-15", result.get(1).date().toString());
         assertEquals(120.0, result.get(1).price());
-        verify(workRepository, times(1)).findAllByCarId(carId);
     }
 
     @Test
     void getAllWorksByCarId_shouldReturnEmptyListWhenNoWorksFound() {
         // GIVEN
         String carId = "2";
-        when(workRepository.findAllByCarId(carId)).thenReturn(Collections.emptyList());
         // WHEN
         List<WorkDto> result = workService.getAllWorksByCarId(carId);
         // THEN
         assertEquals(0, result.size());
-        verify(workRepository, times(1)).findAllByCarId(carId);
     }
 
     @Test
     void createWork_shouldSaveAndReturnWork() {
         //GIVEN
-        WorkDto workDto = new WorkDto("generated-id","generated-carId","Tires change",10000,LocalDate.of(2023,1,10),50.0);
-        Work work = new Work("generated-id","generated-carId","Tires change",10000,LocalDate.of(2023,1,10),50.0);
-        when(workRepository.save(any(Work.class))).thenReturn(work);
+        WorkDto workDto = new WorkDto("generated-id","generated-carId","workTypeId", "Tires change",10000,LocalDate.of(2023,1,10),50.0);
         //WHEN
         WorkDto result = workService.createWork(workDto);
         //THEN
+        assertEquals("generated-id", result.id());
         assertEquals("generated-carId", result.carId());
+        assertEquals("workTypeId", result.workTypeId());
         assertEquals("Tires change", result.type());
         assertEquals(10000, result.mileage());
         assertEquals(LocalDate.of(2023,1,10), result.date());
         assertEquals(50.0, result.price());
-        verify(workRepository, times(1)).save(any(Work.class));
     }
 
     @Test
     void updateWork_shouldUpdateAndReturnUpdatedWork_whenWorkExists() {
         //GIVEN
-        Work existingWork = new Work("generated-id","generated-carId","Tires change",10000,LocalDate.of(2023,1,10),50.0);
-        WorkDto updatedWorkDto = new WorkDto("generated-id","generated-carId","Oil change",10500,LocalDate.of(2023,1,10),25.0);
-        Work updatedWork = new Work("generated-id","generated-carId","Oil change",10500,LocalDate.of(2023,1,10),25.0);
-        when(workRepository.findById("generated-id")).thenReturn(Optional.of(existingWork));
-        when(workRepository.save(any(Work.class))).thenReturn(updatedWork);
+        String id = "generated-id";
+        Work existingWork = new Work(id,"generated-carId","workTypeId","Tires change",10000,LocalDate.of(2023,1,10),50.0);
+        workRepository.save(existingWork);
+        WorkDto updatedWorkDto = new WorkDto(id,"generated-carId","workTypeId","Oil change",10500,LocalDate.of(2023,1,10),25.0);
         //WHEN
-        WorkDto result = workService.updateWork("generated-id", updatedWorkDto);
+        WorkDto result = workService.updateWork(id, updatedWorkDto);
         //THEN
         assertEquals("generated-carId", result.carId());
         assertEquals("Oil change", result.type());
         assertEquals(10500, result.mileage());
         assertEquals(LocalDate.of(2023,1,10), result.date());
         assertEquals(25.0, result.price());
-        verify(workRepository, times(1)).findById("generated-id");
-        verify(workRepository, times(1)).save(any(Work.class));
     }
 
     @Test
     void updateWork_shouldThrowException_whenWorkNotFound() {
         //GIVEN
-        WorkDto updatedWorkDto = new WorkDto("generated-id","generated-carId","Tires change",10000,LocalDate.of(2023,1,10),50.0);
-        when(workRepository.findById("generated-id")).thenReturn(Optional.empty());
+        String id = "generated-id";
+        WorkDto updatedWorkDto = new WorkDto(id,"generated-carId","workTypeId","Tires change",10000,LocalDate.of(2023,1,10),50.0);
         //WHEN THEN
-        assertThrows(NoSuchElementException.class, () -> workService.updateWork("generated-id", updatedWorkDto));
-        verify(workRepository, times(1)).findById("generated-id");
-        verify(workRepository, never()).save(any(Work.class));
+        assertThrows(NoSuchElementException.class, () -> workService.updateWork(id, updatedWorkDto));
     }
 
     @Test
     void deleteWorkById_shouldDeleteWork_whenWorkExists() {
         // GIVEN
-        Work existingWork = new Work("generated-id", "generated-carId", "Tires change", 10000, LocalDate.of(2023, 1, 10), 50.0);
-        when(workRepository.findById("generated-id")).thenReturn(Optional.of(existingWork));
-
+        String id = "generated-id";
+        Work existingWork = new Work(id, "generated-carId", "workTypeId","Tires change", 10000, LocalDate.of(2023, 1, 10), 50.0);
+        workRepository.save(existingWork);
         // WHEN
-        workService.deleteWorkById("generated-id");
-
+        workService.deleteWorkById(id);
+        Optional<Work> deletedWork = workRepository.findById(id);
         // THEN
-        verify(workRepository, times(1)).findById("generated-id");
-        verify(workRepository, times(1)).delete(existingWork);
+        assertTrue(deletedWork.isEmpty());
     }
 
 
     @Test
     void deleteWorkById_shouldThrowException_whenWorkNotFound() {
         //GIVEN
-        when(workRepository.findById("not-existing-id")).thenReturn(Optional.empty());
+        String notExistingId = "generated-not-existing-id";
         //WHEN THEN
-        assertThrows(NoSuchElementException.class, () -> workService.deleteWorkById("not-existing-id"));
-        verify(workRepository, times(1)).findById("not-existing-id");
-        verify(workRepository, never()).delete(any(Work.class));
+        assertThrows(NoSuchElementException.class, () -> workService.deleteWorkById(notExistingId));
     }
 }
